Fix channel name cutoff. Again.

--- a/ui/component/recommendedContent/style.scss
+++ b/ui/component/recommendedContent/style.scss
@@ -24,23 +24,27 @@
   }
 
   .claim-preview-metadata {
-    max-width: calc(100% - var(--file-list-thumbnail-width) - calc(var(--spacing-m) * 3));
+    max-width: 100%;
     .claim-tile__info {
       margin-top: 0;
-      width: 100%;
+      max-width: 100%;
       .media__subtitle {
-        width: 100%;
-        .button__content {
-          margin-top: 0;
-          width: 100%;
-          .channel-name {
+        max-width: 100%;
+        .button {
+          max-width: 100%;
+          .button__content {
             margin-top: 0;
-            width: 100%;
-            p {
-              overflow: hidden;
-              text-overflow: ellipsis;
-              white-space: nowrap;
-              width: 100%;
+            max-width: 100%;
+            .channel-name {
+              margin-top: 0;
+              max-width: 100%;
+              p {
+                display: inline-block;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                max-width: 180px;
+              }
             }
           }
         }
